Bug 228321 - Autosave interacts with find/replace textfield moving cursor into current file textarea
Summary: Autosave interacts with find/replace textfield moving cursor into current fil...
Status: RESOLVED FIXED
Alias: None
Product: kile
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Michel Ludwig
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-24 15:37 UTC by Andrea
Modified: 2010-05-25 22:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrea 2010-02-24 15:37:19 UTC
Version:           2.1beta3 (using KDE 4.3.5)
Compiler:          gcc
OS:                Linux (i686) release 2.6.31.12-0.1-desktop
Installed from:    openSUSE RPMs

Hi all,
I have just noted that autosave moves the cursor from the find/replace textfield to the area containing current file. This can be very dangerous, expecially when you have selected some text for finding/replacing something in selection only since the text typed during the autosave will replace the content of your selection.

How to reproduce:
1) enable autosave
2) type something (in order to have a modified file)
3) open find/replace tool
4) type something in find/replace textfield
5) wait until autosave
6) check the position of the cursor

This problem does not depend on Structure refresh, since it occurs also when Files and Project view is chosen.
Comment 1 j__n 2010-04-08 02:20:10 UTC
Not only autosave, but also save will also do this.  It will also move your cursor if you are in the konsole view.
Comment 2 Michel Ludwig 2010-05-25 22:15:05 UTC
SVN commit 1130621 by mludwig:

Change the focus less often explicitly as this causes undesired side effects.

BUG: 228321


 M  +0 -5      kileviewmanager.cpp  
 M  +1 -4      widgets/konsolewidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1130621