Change the focus less often explicitly as this causes undesired side effects.

BUG: 228321